--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-# Cookie Clicker Game
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,76 +6,62 @@
     <title>Cookie Clicker</title>
     <style>
         body { font-family: Arial, sans-serif; text-align: center; }
-        #cookie { width: 200px; cursor: pointer; }
         #upgrades { margin-top: 20px; }
         .upgrade { margin: 10px; }
     </style>
 </head>
 <body>
     <h1>Cookie Clicker</h1>
-    <img id="cookie" src="cookie.png" alt="Cookie">
-    <h2 id="cookieCount">Cookies: 0</h2>
-    <div id="upgrades"></div>
-    <button id="save">Save Game</button>
-    <button id="load">Load Game</button>
-
+    <div>
+        <h2 id="cookieCount">Cookies: 0</h2>
+        <button id="cookieButton">Click me!</button>
+    </div>
+    <div id="upgrades">
+        <h2>Upgrades</h2>
+        <div class="upgrade" id="upgrade1" onclick="buyUpgrade(1)">Upgrade 1: Cost 10 Cookies (Level: 0)</div>
+        <div class="upgrade" id="upgrade2" onclick="buyUpgrade(2)">Upgrade 2: Cost 20 Cookies (Level: 0)</div>
+        <div class="upgrade" id="upgrade3" onclick="buyUpgrade(3)">Upgrade 3: Cost 30 Cookies (Level: 0)</div>
+        <div class="upgrade" id="upgrade4" onclick="buyUpgrade(4)">Upgrade 4: Cost 40 Cookies (Level: 0)</div>
+        <div class="upgrade" id="upgrade5" onclick="buyUpgrade(5)">Upgrade 5: Cost 50 Cookies (Level: 0)</div>
+        <div class="upgrade" id="upgrade6" onclick="buyUpgrade(6)">Upgrade 6: Cost 60 Cookies (Level: 0)</div>
+        <div class="upgrade" id="upgrade7" onclick="buyUpgrade(7)">Upgrade 7: Cost 70 Cookies (Level: 0)</div>
+        <div class="upgrade" id="upgrade8" onclick="buyUpgrade(8)">Upgrade 8: Cost 80 Cookies (Level: 0)</div>
+        <div class="upgrade" id="upgrade9" onclick="buyUpgrade(9)">Upgrade 9: Cost 90 Cookies (Level: 0)</div>
+        <div class="upgrade" id="upgrade10" onclick="buyUpgrade(10)">Upgrade 10: Cost 100 Cookies (Level: 0)</div>
+    </div>
     <script>
-        let cookieCount = 0;
-        let upgrades = [];
-        const cookieElement = document.getElementById('cookieCount');
-        const upgradesElement = document.getElementById('upgrades');
+        let cookies = 0;
+        let upgrades = Array(10).fill(0);
+        const upgradeCosts = [10, 20, 30, 40, 50, 60, 70, 80, 90, 100];
 
-        document.getElementById('cookie').onclick = function() {
-            cookieCount++;
-            cookieElement.innerText = `Cookies: ${cookieCount}`;
+        document.getElementById('cookieButton').onclick = function() {
+            cookies++;
+            document.getElementById('cookieCount').innerText = "Cookies: " + cookies;
         };
 
-        function addUpgrade(name, cost, effect) {
-            const upgrade = { name, cost, effect };
-            upgrades.push(upgrade);
-            renderUpgrades();
+        function buyUpgrade(upgradeIndex) {
+            const cost = upgradeCosts[upgradeIndex - 1] + (upgrades[upgradeIndex - 1] * 10);
+            if (cookies >= cost) {
+                cookies -= cost;
+                upgrades[upgradeIndex - 1]++;
+                document.getElementById('upgrade' + upgradeIndex).innerText = "Upgrade " + upgradeIndex + ": Cost " + (cost + 10) + " Cookies (Level: " + upgrades[upgradeIndex - 1] + ")";
+                document.getElementById('cookieCount').innerText = "Cookies: " + cookies;
+            }
         }
 
-        function renderUpgrades() {
-            upgradesElement.innerHTML = '';
-            upgrades.forEach((upgrade, index) => {
-                const button = document.createElement('button');
-                button.innerText = `${upgrade.name} - Cost: ${upgrade.cost}`;
-                button.className = 'upgrade';
-                button.onclick = function() {
-                    if (cookieCount >= upgrade.cost) {
-                        cookieCount -= upgrade.cost;
-                        cookieElement.innerText = `Cookies: ${cookieCount}`;
-                        upgrade.effect();
-                    }
-                };
-                upgradesElement.appendChild(button);
-            });
-        }
-
-        document.getElementById('save').onclick = function() {
-            localStorage.setItem('cookieCount', cookieCount);
+        setInterval(function() {
+            localStorage.setItem('cookies', cookies);
             localStorage.setItem('upgrades', JSON.stringify(upgrades));
+        }, 60000);
+
+        window.onload = function() {
+            cookies = parseInt(localStorage.getItem('cookies')) || 0;
+            upgrades = JSON.parse(localStorage.getItem('upgrades')) || Array(10).fill(0);
+            document.getElementById('cookieCount').innerText = "Cookies: " + cookies;
+            for (let i = 0; i < upgrades.length; i++) {
+                document.getElementById('upgrade' + (i + 1)).innerText = "Upgrade " + (i + 1) + ": Cost " + (upgradeCosts[i] + (upgrades[i] * 10)) + " Cookies (Level: " + upgrades[i] + ")";
+            }
         };
-
-        document.getElementById('load').onclick = function() {
-            cookieCount = parseInt(localStorage.getItem('cookieCount')) || 0;
-            upgrades = JSON.parse(localStorage.getItem('upgrades')) || [];
-            cookieElement.innerText = `Cookies: ${cookieCount}`;
-            renderUpgrades();
-        };
-
-        // Example upgrades
-        addUpgrade('Double Click', 10, () => {
-            const originalClick = cookieCount;
-            cookieCount += 2;
-            cookieElement.innerText = `Cookies: ${cookieCount}`;
-        });
-
-        addUpgrade('Cookie Multiplier', 50, () => {
-            cookieCount += 10;
-            cookieElement.innerText = `Cookies: ${cookieCount}`;
-        });
     </script>
 </body>
 </html>
